# neutronics_material_maker

./: .coverage  .gitignore  .travis.yml  AUTHORS.md  CITATION.cff  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  README.md.html  Untitled.ipynb  dist_pac.sh  environment.yml  examples.py  files.txt  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  requirments.txt  setup.cfg  setup.py  tox.ini  uninstall.sh  update_pip.sh  ~$nuclear_data.xlsx
.circleci/: config.yml
.github/workflows/: autopep8.yml  ci_with_install.yml  python-publish-testpypi.yml  python-publish.yml
.pytest_cache/v/cache/: lastfailed
docs/: environment.yml
docs/source/: conf.py  example_library_usage.rst  example_material.rst  example_material_from_library.rst  example_material_from_mixture.rst  example_multimaterial.rst  index.rst  install.rst  material.rst  multimaterial.rst
images/: demo_script.sh
neutronics-material-maker/data/: breeder_materials_with_crystal_structure.json  structural_materials.json
neutronics_material_MAKER/: __init__.py  common_utils.py  compound.py  element.py  homogenised_mixture.py  isotope.py  jsonable_object.py  material.py
neutronics_material_MAKER/tests/: module_tests.py  testsuite.py
neutronics_material_maker/: __init__.py  all_materials.py  all_materials_from_json.py  common_utils.py  compound.py  element.py  examples.py  homogenised_mixture.py  isotope.py  material.py  material_maker_classes.py  materials_coolants.py  materials_fusion_breeders.py  mattis_playpen.py  mutlimaterial.py  nmm.py  nmm2.py  nuclear_data.csv  nuclear_data.xlsx  refmaterials.py  utilities.py  utils.py  xsdir.serp
neutronics_material_maker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
neutronics_material_maker/data/: breeder_materials.json  breeder_materials_with_crystal_structure.json  coolant_materials.json  magnet_materials.json  moderators.json  multiplier_and_breeder_materials.json  multiplier_materials.json  plasma_material.json  pnnl_materials.json  structural_materials.json
neutronics_material_maker/tests/: .coverage  module_tests.py
src/neutronics_material_maker/: material.py  utils.py
src/neutronics_material_maker/data/: breeder_materials.json  coolant_materials.json  insulators.json  moderators.json  multiplier_and_breeder_materials.json  pnnl_materials.json  scintillators.json
tests/: module_tests.py  nuclear_data.csv  ref_material_tests.py  test.py  test_Material.py  test_Material_from_mixture.py  test_Multmaterial.py  test_utils.py  tests.py  testsuite.py
