[metadata]
name = neutronics_material_maker
author = The neutronics_material_maker Development Team
author_email = mail@jshimwell.com
description = A tool for making reproducible materials and standardizing use across several neutronics codes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fusion-energy/neutronics_material_maker
license = MIT
license_file = LICENSE.txt
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/fusion-energy/neutronics_material_maker
    Tracker = https://github.com/fusion-energy/neutronics_material_maker/issues

[options]
packages = find:
python_requires= >=3.6
install_requires=
    asteval >= 0.9.20

[options.package_data]
* = *.json

[options.extras_require]
density =
    coolprop
tests = 
    pytest >= 5.4.3
    pytest-cov>=2.12.1
    pytest-runner>=5.3.1
docs = 
    sphinx >= 4.1.2
    sphinx_autodoc_typehints

[flake8]
per-file-ignores = __init__.py:F401
